fixed all bugs in trade